<resources>
    <string name="app_name">BharatNews</string>
    <string name="settings">Settings</string>
    <string name="premium_subscription">Premium Subscription</string>
    <string name="subscription_desc">Get ad-free news and exclusive content.</string>
    <string name="subscribe_for_1">Subscribe for ₹1</string>
    <string name="general">General</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_language">App Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="reader_text_size">Reader Text Size</string>
    <string name="breaking_news_alerts">Breaking News Alerts</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="live">LIVE</string>
    <string name="trending_now">Trending Now 📈</string>
    <string name="latest_news">Latest News</string>
    <string name="search_hint">Search for news...</string>
    <string name="read_more">Read More in Browser</string>
    <string name="article_detail">Article Detail</string>
</resources>